after pragme workday
Big refactor

--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop.html">Shop</a>
@@ -64,21 +64,15 @@
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise</a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                      <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                      <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                      <a class="dropdown-item" href="21ststfarm.html">21st Street Farm</a>
+                      <a class="dropdown-item" href="ucpage.html">Rise Farm</a>
                     </div>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ucpage.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -105,47 +99,27 @@
     </div> -->
 
 
-    <div class="body-text">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
-        few
-        other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
-        friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
-        restaurants partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
-        of crops in four seasons.
-    </div>
     <div class="secthead m-5" align="center">
-        a word about how we grow
+        hoop house design & build
     </div>
     <div class="row1">
         <div class="c1"></div>
         <div class="c2 m-5 centered" align="center">
-            <p class="just-txt">
-                We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
-                vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
-                never use genetically modified organisms.
-                We are dedicated to growing fruits and vegetables in ways that don't damage the environment in which
-                they are grown or the people who consume them. Our fertilizers are always organic. We avoid using
-                poisons or toxins to control insects, weeds, and disease; when absolutely necessary, we only use
-                OMRI-approved products.
-                We believe that food grown locally, seasonally, and sustainably doesn't just taste better and isn't just
-                more health inducing but is more humane and socially just, too. We hope you will appreciate the vision
-                we have for our farm and that you will join us in making it a reality by purchasing your produce here.
-            </p>
-            <p class="signature">- Leah Dannar-Garcia</p>
-            <p>owner/operator</p>
+            <p class="just-txt body-text">If you are looking to expand your growing season, or get a jump on summer crops, season extension though high tunnels or hoop houses is a great place to start. We can design and source a structure to fit your space and needs. Let us help you find grant sources and navigate the grant application process. Our dedicated crew will build your tunnel on site and offer consultation for crop planning to make the most of your new extended season!</p>
         </div>
-        <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
+        <div class="c3"><img class="plantsale" src="../img/hoophouse.jpg"></div>
         <div class="c4"></div>
     </div>
+    <div class="secthead m-5" align="center">
+        consulting
+    </div>
     <div class="row2">
-        <div class="c1"><img src="../img/peppers.jpg"></div>
+        <div class="c1"><img src="../img/consulting.jpg"></div>
         <div class="c2">
-            <p class="just-txt">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since 2017, Firefly
-                Farm hosts events periodically. Please subscribe to the E-newsletter or follow along on Facebook for
-                updates.  Come experience our thoughtfully curated group of vendors and learn the backstory of your
-                local food.</p>
+            <p class="just-txt body-text">Whether you're looking to diversify your produce offering, begin a new u-pick blueberry patch or community garden, let us help you plan, price or implement your vision. For more information on we can help you begin or streamline your farm processes, fill out the contact form below and tell us a little about what you’re looking for!</p>
         </div>
     </div>
-    <h1 id="grow">grow with Firefly Farm online</h1>
+    <h1>grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
