--- a/shop.html
+++ b/shop.html
@@ -93,7 +93,7 @@
 
 
     <div class="secthead m-5" align="center">
-        Produce Store - Functionality coming soon!
+        produce store - coming soon
     </div>
     <!-- start of collection -->
     <div id='collection-component-1614376415945'></div>
@@ -163,7 +163,7 @@
                                     }
                                 },
                                 "text": {
-                                    "button": "Add to cart"
+                                    "button": "Add to cart",
                                 }
                             },
                             "productSet": {
@@ -246,8 +246,8 @@
     </script>
     <!-- end of collection -->
 
-    <h1>Grow With Firefly Farm Online</h1>
-    <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:space-around"><a
+    <h1>grow with Firefly Farm online</h1>
+    <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
                 class="niftybutton-facebook" style="display:block;fill:currentColor" data-tag="fac" data-name="Facebook"
