--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -44,31 +44,28 @@
             <p class="strike">&#9</p>
         </div> -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
-    <nav class="navbar sticky-top navbar-expand-md navbar-light justify-content-md-center">
+    <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+            <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../shop.html">Shop</a>
+                    <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Produce</a>
+                    <a class="nav-link" href="../ucpage.html">Our Farms</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown10" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="ucpage.html">Plant Sale</a>
-                        <a class="dropdown-item" href="ucpage.html">Leaf Festival</a>
-                        <a class="dropdown-item" href="ucpage.html">Workshops</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ucpage.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -80,7 +77,7 @@
 
 
     <a href="../index.html">
-        <img class="site-logo " src="../img/fireflyfarmlogo_vector1.svg" alt="Firefly Farm logo" class="img-fluid"
+        <img class="site-logo" src="../img/fireflyfarmlogo_vector1.svg" alt="Firefly Farm logo" class="img-fluid"
             height="124px">
     </a>
     <div class="container">
@@ -123,12 +120,13 @@
             </div>
         </div>
         <!-- Form Ended -->
-        <div class="contact-info mt-5">
-            <p>Contact Info</p>
+        <div class="contact-info mb-5 mt-5">
+            <p class="b-farmhand">Contact Info</p>
+            <p></p>
             <p>Leah@FireflyFarmWichita.com</p>
             <p>316-305-6609</p>
-            <p>15615 E 21st Street North</p>
-            <p>Wichita, KS 67230</p>
+            <p>15615 E 21st Street N</p>
+            <p class="btm-txt">Wichita, KS 67230</p>
         </div>
     </div>
 
