--- a/events.html
+++ b/events.html
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop.html">Shop</a>
@@ -64,21 +64,15 @@
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise</a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Events</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                      <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                      <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                      <a class="dropdown-item" href="21ststfarm.html">21st Street Farm</a>
+                      <a class="dropdown-item" href="ucpage.html">Rise Farm</a>
                     </div>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ucpage.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -105,47 +99,38 @@
     </div> -->
 
 
-    <div class="body-text">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
-        few
-        other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
-        friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
-        restaurants partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
-        of crops in four seasons.
-    </div>
-    <div class="secthead m-5" align="center">
-        a word about how we grow
+    <div class="secthead m-5" id="plantsale" align="center">
+        spring plant sale
     </div>
     <div class="row1">
         <div class="c1"></div>
         <div class="c2 m-5 centered" align="center">
-            <p class="just-txt">
-                We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
-                vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
-                never use genetically modified organisms.
-                We are dedicated to growing fruits and vegetables in ways that don't damage the environment in which
-                they are grown or the people who consume them. Our fertilizers are always organic. We avoid using
-                poisons or toxins to control insects, weeds, and disease; when absolutely necessary, we only use
-                OMRI-approved products.
-                We believe that food grown locally, seasonally, and sustainably doesn't just taste better and isn't just
-                more health inducing but is more humane and socially just, too. We hope you will appreciate the vision
-                we have for our farm and that you will join us in making it a reality by purchasing your produce here.
+            <p class="just-txt body-text">
+                With Spring comes growth, plant sales are fun and we are going to sell you plants. They're plants, for sale, in pots. We love to grow them, and you love to buy them.
             </p>
-            <p class="signature">- Leah Dannar-Garcia</p>
-            <p>owner/operator</p>
         </div>
-        <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
+        <div class="c3"><img class="plantsale" src="../img/plant-sale.jpg"></div>
         <div class="c4"></div>
     </div>
+    <div class="secthead m-5" id="fttdinner" align="center">
+        summer farm-to-table dinners
+    </div>
     <div class="row2">
-        <div class="c1"><img src="../img/peppers.jpg"></div>
+        <div class="c1"><img src="../img/fttdinner.jpg"></div>
         <div class="c2">
-            <p class="just-txt">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since 2017, Firefly
-                Farm hosts events periodically. Please subscribe to the E-newsletter or follow along on Facebook for
-                updates.  Come experience our thoughtfully curated group of vendors and learn the backstory of your
-                local food.</p>
+            <p class="just-txt body-text">Farm-to-table dinners have been held here in our barns since 2016 to rave reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to learn about upcoming events.</p>
         </div>
     </div>
-    <h1 id="grow">grow with Firefly Farm online</h1>
+    <div class="secthead m-5" id="fallfest" align="center">
+        fall leaf festival
+    </div>
+    <div class="row3">
+        <div class="c3"><img class="fttpic" src="../img/leaves.jpg"></div>
+        <div class="c1">
+            <p class="just-txt body-text">Fall Leaf Fesitval! Drop off your bagged leaves to help us build our compost program. Turn your yard waste into wonderful produce!</p>
+        </div>
+    </div>
+    <h1>grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
