--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
     <meta name="author" content="SitePoint">
