--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
     <meta name="author" content="SitePoint">
@@ -17,7 +17,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_index.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_21ststfarm.css?v=1.0">
 
 </head>
 
@@ -55,24 +55,30 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Our Farms</a>
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="#!">21st Street Farm</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise Farm</a>
+                        <a class="dropdown-item" href="#!">Firefly</a>
+                        <a class="dropdown-item" href="ucpage.html">Rise</a>
                     </div>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -99,34 +105,53 @@
     </div> -->
 
 
-    <div class="body-text">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita and surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br> <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for up-to-date info on all that's going on at Firefly Farm.  
+    <div class="body-text">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita and
+        surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a
+        heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br>
+        <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
+        farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list for
+        up-to-date info on all that's going on at Firefly Farm.
     </div>
-    <div class="secthead m-5" align="center">
-        Leah
-    </div>
-    <div class="secthead m-5" align="center">
-        Ron
-    </div>
-    <div class="row1">
-        <div class="c1"></div>
-        <div class="c2 m-5 centered" align="center">
-            <h2>Leah</h2>
-            <p class="just-txt">
-                Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience left her with a deep love of animals and the farming life.  She spent her early adult years in New York City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998 and marrying the boy next door soon after.  She will never forget the persimmon groves she saw in Korea, the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia. Those far away experiences had a great impact on her ideas about regional agriculture and cuisine. From the types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space, her vision is beginning to take shape.  In the near future, it includes adding a u-pick operation and seasonal café. She gets little free time these days, but when she does, she enjoys music and the visual arts, hiking and kayaking in SE Kansas, and essay writing.
+    <div class="container1">
+        <div class="col1 colbio">
+            <div class="secthead m-5 lhead" align="center">
+                Leah
+            </div>
+            <div class="leahb centered"><img src="../img/leahb.jpg"></div>
+            <p class="just-txt leahtxt">
+                Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
+                left her with a deep love of animals and the farming life. She spent her early adult years in New York
+                City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998
+                and marrying the boy next door soon after. She will never forget the persimmon groves she saw in Korea,
+                the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia. Those
+                far away experiences had a great impact on her ideas about regional agriculture and cuisine. From the
+                types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space, her
+                vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
+                seasonal café. She gets little free time these days, but when she does, she enjoys music and the visual
+                arts, hiking and kayaking in SE Kansas, and essay writing.
             </p>
         </div>
-        <div class="c3"><img src="../img/leah.jpg"></div>
-        <div class="c4"></div>
-    </div>
-    <div class="row2">
-        
-        <div class="c2">
-            <h2>Ron</h2>
-            <p class="just-txt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought the place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms all around. Over the years, Ron’s family had a milk cow, beef cattle, a few pigs, some sheep, lots of chickens, hunting dogs, and barn cats. Ron’s dad raised wheat and soy beans and of course, a great, big garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both of which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt both shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and repair shop here for over thirty years. He is retired now but is an honorary member of our farm team and contributes more than a little to the never ending job of fixing, repairing, and maintaining everything. Almost every corner of this old place has some kind of memorable story attached to it. Now, we are thrilled to share it with the public and we invite you to make some of your own memorable stories here, too!</p>
+        <div class="col2 colbio">
+            <div class="secthead m-5 rhead" align="center">
+                Ron
+            </div>
+            <div class="ronb centered"><img src="../img/ronb.jpg"></div>
+            <p class="just-txt rontxt">The farm was built over a hundred years ago in 1916. Ron Garcia’s parents bought
+                the
+                place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
+                all around. Over the years, Ron’s family had a milk cow, beef cattle, a few pigs, some sheep, lots of
+                chickens, hunting dogs, and barn cats. Ron’s dad raised wheat and soy beans and of course, a great, big
+                garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both of
+                which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt both
+                shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and repair
+                shop here for over thirty years. He is retired now but is an honorary member of our farm team and
+                contributes more than a little to the never ending job of fixing, repairing, and maintaining everything.
+                Almost every corner of this old place has some kind of memorable story attached to it. Now, we are
+                thrilled to share it with the public and we invite you to make some of your own memorable stories here,
+                too!</p>
         </div>
-        <div class="c1"><img src="../img/peppers.jpg"></div>
     </div>
-    <h1>grow with Firefly Farm online</h1>
+    <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -221,11 +246,11 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
     <script>
-        $('.navbar .dropdown').hover(function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
-}, function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
-});
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
