--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -48,31 +48,43 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="Menu-Btn">Menu</span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop.html">Shop</a>
+                    <a class="nav-link" href="/../shop.html">Shop</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Our Farms</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="/../21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="/../ucpage.html">Rise</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="/../events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="/../events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="/../events.html#fallfest">Fall Leaf Festival</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../ucpage.html">Our Farms</a>
+                    <a class="nav-link" href="/../services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contactform/formpage.html">Contact</a>
+                    <a class="nav-link" href="#!">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <div class="page-divider" style></div>
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
 
 
