--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
     <meta name="author" content="SitePoint">
@@ -17,7 +17,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_index.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_events.css?v=1.0">
 
 </head>
 
@@ -55,24 +55,30 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Our Farms</a>
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="21ststfarm.html">21st Street Farm</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise Farm</a>
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="ucpage.html">Rise</a>
                     </div>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="#fallfest">Fall Leaf Festival</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -106,10 +112,11 @@
         <div class="c1"></div>
         <div class="c2 m-5 centered" align="center">
             <p class="just-txt body-text">
-                With Spring comes growth, plant sales are fun and we are going to sell you plants. They're plants, for sale, in pots. We love to grow them, and you love to buy them.
+                With Spring comes growth, plant sales are fun and we are going to sell you plants. They're plants, for
+                sale, in pots. We love to grow them, and you love to buy them.
             </p>
         </div>
-        <div class="c3"><img class="plantsale" src="../img/plant-sale.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
         <div class="c4"></div>
     </div>
     <div class="secthead m-5" id="fttdinner" align="center">
@@ -118,7 +125,12 @@
     <div class="row2">
         <div class="c1"><img src="../img/fttdinner.jpg"></div>
         <div class="c2">
-            <p class="just-txt body-text">Farm-to-table dinners have been held here in our barns since 2016 to rave reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to learn about upcoming events.</p>
+            <p class="just-txt body-text">Farm-to-table dinners have been held here in our barns since 2016 to rave
+                reviews. We source fruits and vegetables from our own farm and supplement with ingredients from other
+                local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
+                ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made
+                beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to
+                learn about upcoming events.</p>
         </div>
     </div>
     <div class="secthead m-5" id="fallfest" align="center">
@@ -127,10 +139,11 @@
     <div class="row3">
         <div class="c3"><img class="fttpic" src="../img/leaves.jpg"></div>
         <div class="c1">
-            <p class="just-txt body-text">Fall Leaf Fesitval! Drop off your bagged leaves to help us build our compost program. Turn your yard waste into wonderful produce!</p>
+            <p class="just-txt body-text">Fall Leaf Fesitval! Drop off your bagged leaves to help us build our compost
+                program. Turn your yard waste into wonderful produce!</p>
         </div>
     </div>
-    <h1>grow with Firefly Farm online</h1>
+    <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -225,11 +238,15 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
     <script>
-        $('.navbar .dropdown').hover(function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
-}, function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
-});
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
+    </script>
+    <script>
+        var cw = $('.sqr').width();
+        // $('.sqr').css({ 'height': cw + 'px' });
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
