--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
-    <meta name="author" content="SitePoint">
+    <meta name="author" content="Tilthe">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
@@ -17,7 +17,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_index.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_index1.css?v=1.0">
 
 </head>
 
@@ -61,22 +61,22 @@
                     <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Our Farms</a>
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="ucpage.html">Rise</a>
                     </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Events</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
-                      <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
-                      <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
                     </div>
-                  </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="services.html">Services</a>
                 </li>
@@ -105,7 +105,7 @@
     </div> -->
 
 
-    <div class="body-text">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
+    <div class="body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
         few
         other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
         friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
@@ -139,7 +139,8 @@
     <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
         <div class="c2">
-            <p class="just-txt">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since 2017, Firefly
+            <p class="just-txt">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since
+                2017, Firefly
                 Farm hosts events periodically. Please subscribe to the E-newsletter or follow along on Facebook for
                 updates.  Come experience our thoughtfully curated group of vendors and learn the backstory of your
                 local food.</p>
@@ -240,11 +241,11 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
     <script>
-        $('.navbar .dropdown').hover(function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
-}, function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
-});
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
