--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
     <meta name="author" content="SitePoint">
@@ -17,7 +17,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_index.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_services.css?v=1.0">
 
 </head>
 
@@ -55,24 +55,30 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shop.html">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown"
-                      aria-haspopup="true" aria-expanded="false">Our Farms</a>
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                      <a class="dropdown-item" href="21ststfarm.html">21st Street Farm</a>
-                      <a class="dropdown-item" href="ucpage.html">Rise Farm</a>
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="ucpage.html">Rise</a>
                     </div>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Events</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Services</a>
+                    <a class="nav-link" href="#!">Services <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -105,7 +111,11 @@
     <div class="row1">
         <div class="c1"></div>
         <div class="c2 m-5 centered" align="center">
-            <p class="just-txt body-text">If you are looking to expand your growing season, or get a jump on summer crops, season extension though high tunnels or hoop houses is a great place to start. We can design and source a structure to fit your space and needs. Let us help you find grant sources and navigate the grant application process. Our dedicated crew will build your tunnel on site and offer consultation for crop planning to make the most of your new extended season!</p>
+            <p class="just-txt body-text">If you are looking to expand your growing season, or get a jump on summer
+                crops, season extension though high tunnels or hoop houses is a great place to start. We can design and
+                source a structure to fit your space and needs. Let us help you find grant sources and navigate the
+                grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
+                crop planning to make the most of your new extended season!</p>
         </div>
         <div class="c3"><img class="plantsale" src="../img/hoophouse.jpg"></div>
         <div class="c4"></div>
@@ -116,10 +126,13 @@
     <div class="row2">
         <div class="c1"><img src="../img/consulting.jpg"></div>
         <div class="c2">
-            <p class="just-txt body-text">Whether you're looking to diversify your produce offering, begin a new u-pick blueberry patch or community garden, let us help you plan, price or implement your vision. For more information on we can help you begin or streamline your farm processes, fill out the contact form below and tell us a little about what you’re looking for!</p>
+            <p class="just-txt body-text">Whether you're looking to diversify your produce offering, begin a new u-pick
+                blueberry patch or community garden, let us help you plan, price or implement your vision. For more
+                information on we can help you begin or streamline your farm processes, fill out the contact form below
+                and tell us a little about what you’re looking for!</p>
         </div>
     </div>
-    <h1>grow with Firefly Farm online</h1>
+    <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -214,11 +227,11 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
     <script>
-        $('.navbar .dropdown').hover(function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
-}, function() {
-  $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
-});
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
