--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firefly Farm</title>
     <meta name="description" content="Firefly Farm">
     <meta name="author" content="SitePoint">
@@ -17,7 +17,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles_shop.css">
+    <link rel="stylesheet" href="css/styles_index.css">
 
 </head>
 
@@ -49,7 +49,7 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="Menu-Btn">Menu</span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-2 mt-2">
@@ -59,14 +59,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#!">Shop <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Our Farms</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Our Farms</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
+                        <a class="dropdown-item" href="ucpage.html">Rise</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Events</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
+                        <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ucpage.html">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -74,6 +85,7 @@
             </ul>
         </div>
     </nav>
+    <div class="page-divider" style></div>
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <!-- <div class="main-photo"><img src="../img/mainphoto.jpg"></div> -->
     <!-- carousel - does not center image or move through images -->
@@ -246,7 +258,7 @@
     </script>
     <!-- end of collection -->
 
-    <h1>grow with Firefly Farm online</h1>
+    <h1 id="grow">grow with Firefly Farm online</h1>
     <div class="follow-bar" style="display:flex;flex-wrap:wrap;justify-content:center"><a
             href="https://www.facebook.com/fireflyfarmwichitakansas" target="_blank" rel="noopener noreferrer"
             style="text-decoration:none;border:0;width:64px;height:64px;padding:2px;margin:5px;color:#f0f7ee;border-radius:35%;background-color:#304242;"><svg
@@ -340,6 +352,14 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
+    <script>
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
+    </script>
+
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
