Tuesday Meeting refactors
Desktop refactors

--- a/events.html
+++ b/events.html
@@ -65,7 +65,7 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -112,8 +112,9 @@
         <div class="c1"></div>
         <div class="c2 m-5 centered" align="center">
             <p class="just-txt body-text">
-                With Spring comes growth, plant sales are fun and we are going to sell you plants. They're plants, for
-                sale, in pots. We love to grow them, and you love to buy them.
+                With Spring comes growth, plant sales are fun and we are going to sell you plants! 
+Grow fresh and local tomato plants, herbs, and flowers in your home gardens. These starters will make it easy for you to host your own garden-to-table dinners in no time. Come by and talk to other home gardeners like yourself and bring home some new plants and ideas. 
+
             </p>
         </div>
         <div class="c3"><img class="plantsale sqr" src="../img/plant-sale.jpg"></div>
@@ -139,8 +140,10 @@
     <div class="row3">
         <div class="c3"><img class="fttpic" src="../img/leaves.jpg"></div>
         <div class="c1">
-            <p class="just-txt body-text">Fall Leaf Fesitval! Drop off your bagged leaves to help us build our compost
-                program. Turn your yard waste into wonderful produce!</p>
+            <p class="just-txt body-text">Did you know that yard waste, like leaves and trimmings, makes up almost 13% of landfill waste? During our last Fall leaf drive we put the call out to all our friends and neighbors to help divert some of that organic waste, and help build our soil fertility through our compost program. We were thrilled by the popularity of this idea and were quickly overwhelmed with donations - thank you, Wichita!<br><br>
+
+                We gathered leaves from many neighborhoods, including: Overbrook, Crestview, Hawthorne, Lakepoint, Vickridge, Eastborough, Woodlawn Village, and Riverside. We had one kind friend in College Hill organize her whole block! We especially want to thank our friends at <a href="https://www.nudgecompost.com/">Nudge Compost</a> for putting the word out to their customers. Another thank you goes out to <a href="https://www.treetop-nursery.com/">Tree Top Nursery</a> as they dumped their leaves here for a couple of weeks, too.
+                </p>
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
