--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -86,7 +86,7 @@
             </ul>
         </div>
     </nav>
-    <div class="page-divider" style></div>
+    <div class="page-divider" style="display:none"></div>
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <!-- <div class="main-photo"><img src="../img/mainphoto.jpg"></div> -->
     <!-- carousel - does not center image or move through images -->
@@ -105,7 +105,7 @@
     </div> -->
 
 
-    <div class="body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
+    <div class="top-blurb body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
         few
         other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
         friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
@@ -117,8 +117,8 @@
     </div>
     <div class="row1">
         <div class="c1"></div>
-        <div class="c2 m-5 centered" align="center">
-            <p class="just-txt">
+        <div class="c2 mt-5 centered" align="center">
+            <p class="just-txt sect-body-left">
                 We care a lot about how food tastes, so we scour the market to find the most delicious fruit and
                 vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
                 never use genetically modified organisms.
@@ -139,7 +139,7 @@
     <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
         <div class="c2">
-            <p class="just-txt">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since
+            <p class="just-txt sect-body-right">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since
                 2017, Firefly
                 Farm hosts events periodically. Please subscribe to the E-newsletter or follow along on Facebook for
                 updates.  Come experience our thoughtfully curated group of vendors and learn the backstory of your
@@ -211,7 +211,7 @@
             method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
             target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-                <label for="mce-EMAIL" class='farmhand'>Subscribe to our Newsletter</label>
+                <label for="mce-EMAIL" class='farmhand darkbarn'>Subscribe to our Newsletter</label>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address"
                     required>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
