--- a/services.html
+++ b/services.html
@@ -65,12 +65,12 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Events</a>
+                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
