--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -65,12 +65,12 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="#!">Firefly</a>
-                        <a class="dropdown-item" href="ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Events</a>
+                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
@@ -105,7 +105,7 @@
     </div> -->
 
 
-    <div class="body-text">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita and
+    <div class="body-text just-txt">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita and
         surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a
         heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br>
         <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
