--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -63,12 +63,12 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="/../21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="/../ucpage.html">Rise</a>
+                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="events.html" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Events</a>
+                        aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="/../events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="/../events.html#fttdinner">Summer Farm-to-Table Dinners</a>
@@ -88,10 +88,10 @@
     <!-- end of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
 
 
-    <a href="../index.html">
+    <!-- <a href="../index.html">
         <img class="site-logo" src="../img/fireflyfarmlogo_vector1.svg" alt="Firefly Farm logo" class="img-fluid"
             height="124px">
-    </a>
+    </a> -->
     <div class="container">
         <!-- Form Started -->
         <div class="container form-top">
@@ -150,6 +150,13 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> </script>
+    <script>
+        $('.navbar .dropdown').hover(function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(250).slideDown();
+        }, function () {
+            $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
+        });
+    </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
