--- a/ucpage.html
+++ b/ucpage.html
@@ -1,6 +1,14 @@
 <!doctype html>
 
 <html lang="en">
+<!-- TO DO 
+
+-sect-body left and right mobile margin removal
+-navbar toggler outline remove
+--navbar sticky
+
+
+ TO DO-->
 
 <head>
     <meta charset="utf-8">
