--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -39,11 +39,11 @@
             <p class="strike">&#9</p>
         </div> -->
     <div class="motto">
-        <p></p>
+
         <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
         <p><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
-        <p></p>
+
     </div>
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
@@ -65,7 +65,9 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="#!">Firefly</a>
-                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item"
+                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
+                            target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -105,7 +107,8 @@
     </div> -->
 
 
-    <div class="body-text just-txt">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita and
+    <div class="body-text just-txt">A family farm for more than 100 years, Firefly shares earth's abundance with Wichita
+        and
         surrounding communities. Originally purchased by Robert and Violet Garcia in 1950, it is more than just a
         heavenly home. Firefly Farm proudly supports the local food community and sustainable food production.<br>
         <br>Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
@@ -122,14 +125,22 @@
                 Leah Dannar-Garcia grew up two doors to the west of the farm and played here as a kid; the experience
                 left her with a deep love of animals and the farming life. She spent her early adult years in New York
                 City. Later, she travelled and worked in countries around the world before returning to Wichita in 1998
-                and marrying the boy next door soon after. She will never forget the persimmon groves she saw in Korea,
-                the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia. Those
-                far away experiences had a great impact on her ideas about regional agriculture and cuisine. From the
-                types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space, her
-                vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
-                seasonal café. She gets little free time these days, but when she does, she enjoys music and the visual
-                arts, hiking and kayaking in SE Kansas, and essay writing.
+                and marrying the boy next door soon after.<span id="dots">...</span><span id="more"
+                    style="display: none;">
+                    She will never forget the persimmon groves she saw in Korea,
+                    the lady finger bananas she ate in Mexico, or the vineyards she toured in the Republic of Georgia.
+                    Those
+                    far away experiences had a great impact on her ideas about regional agriculture and cuisine. From
+                    the
+                    types of crops grown here, to the farmers’ markets, farm-to-table dinners, and public venue space,
+                    her
+                    vision is beginning to take shape. In the near future, it includes adding a u-pick operation and
+                    seasonal café. She gets little free time these days, but when she does, she enjoys music and the
+                    visual
+                    arts, hiking and kayaking in SE Kansas, and essay writing.</span><span onclick="myFunction()"
+                    id="myBtn" class="apricots">Read more</span>
             </p>
+
         </div>
         <div class="col2 colbio">
             <div class="secthead m-5 rhead" align="center">
@@ -140,15 +151,22 @@
                 the
                 place when he was a small boy back in 1950. Back then 21st Street was a dirt road and there were farms
                 all around. Over the years, Ron’s family had a milk cow, beef cattle, a few pigs, some sheep, lots of
-                chickens, hunting dogs, and barn cats. Ron’s dad raised wheat and soy beans and of course, a great, big
-                garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both of
-                which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt both
-                shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and repair
-                shop here for over thirty years. He is retired now but is an honorary member of our farm team and
-                contributes more than a little to the never ending job of fixing, repairing, and maintaining everything.
-                Almost every corner of this old place has some kind of memorable story attached to it. Now, we are
-                thrilled to share it with the public and we invite you to make some of your own memorable stories here,
-                too!</p>
+                chickens, hunting dogs, and barn cats.<span id="dots1">...</span><span id="more1"
+                    style="display: none;">
+                    Ron’s dad raised wheat and soy beans and of course, a great, big
+                    garden, too. His mom had some fruit trees and dill and garlic planted close to the back door, both
+                    of
+                    which survive to this day. In 1955, the Udall tornado took the barn and garage. Ron’s dad rebuilt
+                    both
+                    shortly afterward and they are still solid structures today. Ron ran a motorcycle dealership and
+                    repair
+                    shop here for over thirty years. He is retired now but is an honorary member of our farm team and
+                    contributes more than a little to the never ending job of fixing, repairing, and maintaining
+                    everything.
+                    Almost every corner of this old place has some kind of memorable story attached to it. Now, we are
+                    thrilled to share it with the public and we invite you to make some of your own memorable stories
+                    here,
+                    too!</span><span onclick="myFunction1()" id="myBtn1" class="apricots">Read more</span></p>
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
@@ -251,6 +269,42 @@
         }, function () {
             $(this).find('.dropdown-menu').first().stop(true, true).delay(100).slideUp()
         });
+    </script>
+
+    <!-- READ MORE FUNCTION -->
+
+    <script>
+        function myFunction() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("myBtn");
+
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "Read more";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = "Read less";
+                moreText.style.display = "inline";
+            }
+        }
+        function myFunction1() {
+            var dots = document.getElementById("dots1");
+            var moreText = document.getElementById("more1");
+            var btnText = document.getElementById("myBtn1");
+
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "Read more";
+                moreText.style.display = "none";
+            } else {
+                dots.style.display = "none";
+                btnText.innerHTML = "Read less";
+                moreText.style.display = "inline";
+            }
+        }
+
     </script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
