--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles_index1.css?v=1.0">
+    <link rel="stylesheet" href="css/styles_all.css?v=1.0">
 
 </head>
 
@@ -40,9 +41,9 @@
         </div> -->
     <div class="motto">
         <p></p>
-        <p><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
-        <p><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
-        <p><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
+        <p id="m1"><span class='foodis'>Food is </span><span class='colord'>Art.</span></p>
+        <p id="m2"><span class='foodis'>Food is </span><span class='colord'>Medicine.</span></p>
+        <p id="m3"><span class='foodis'>Food is </span><span class='colord'>Social Justice.</span></p>
         <p></p>
     </div>
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
@@ -65,7 +66,9 @@
                         aria-expanded="false" onclick="window.location.href='21ststfarm.html';">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item"
+                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
+                            target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -104,8 +107,14 @@
         </div>
     </div> -->
 
+    <!-- Gradient classes
+     barn-gradient-fill 
+     barn-gradient
+    fall-gradient
+    -->
 
-    <div class="top-blurb body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes and a
+    <div class="top-blurb body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes
+        and a
         few
         other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
         friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
@@ -139,7 +148,8 @@
     <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
         <div class="c2">
-            <p class="just-txt sect-body-right">Opening our farm yard to  farmers' market vendors and pop-up, specialty crop sales since
+            <p class="just-txt sect-body-right">Opening our farm yard to  farmers' market vendors and pop-up,
+                specialty crop sales since
                 2017, Firefly
                 Farm hosts events periodically. Please subscribe to the E-newsletter or follow along on Facebook for
                 updates.  Come experience our thoughtfully curated group of vendors and learn the backstory of your
