--- a/services.html
+++ b/services.html
@@ -65,7 +65,9 @@
                         aria-expanded="false">Our Farms</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="21ststfarm.html">Firefly</a>
-                        <a class="dropdown-item" href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/" target="_blank" rel="noopener noreferrer">Rise</a>
+                        <a class="dropdown-item"
+                            href="https://www.fidelitybank.com/resources/knowledge-center/rise-farms-announcement/"
+                            target="_blank" rel="noopener noreferrer">Rise</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -110,7 +112,7 @@
     </div>
     <div class="row1">
         <div class="c1"></div>
-        <div class="c2 m-5 centered" align="center">
+        <div class="c2" align="center">
             <p class="just-txt body-text">If you are looking to expand your growing season, or get a jump on summer
                 crops, season extension though high tunnels or hoop houses is a great place to start. We can design and
                 source a structure to fit your space and needs. Let us help you find grant sources and navigate the
